2013-11-30  Glenn Morris  <rgm@gnu.org>

	Stop keeping (most) generated cedet grammar files in the repository.
	* grammars/README: Remove.
	* grammars/Makefile.in: New file.
	* grammars/c.by, grammars/java-tags.wy, grammars/js.wy:
	* grammars/python.wy: Update declarations to match generated outputs.

2013-11-28  Glenn Morris  <rgm@gnu.org>

	* unidata/unidata-gen.el (unidata-gen-files):
	Disable autoloads in generated files.

2013-11-27  Glenn Morris  <rgm@gnu.org>

	* unidata/Makefile.in (all, install, clean, bootstrap-clean)
	(distclean, maintainer-clean): Declare as PHONY.
	(compile, extraclean): New.
	(${DSTDIR}/charprop.el): Depend on source files rather than
	intermediate products.

2013-11-11  Glenn Morris  <rgm@gnu.org>

	* unidata/BidiMirroring.txt, unidata/UnicodeData.txt: Update to 6.3.0.

	* unidata/unidata-gen.el (unidata-gen-files):
	Tweak whitespace in generated files.

2013-11-09  Glenn Morris  <rgm@gnu.org>

	* unidata/unidata-gen.el (unidata-gen-files):
	Fix deletion of existing output files after 2013-10-30 changes.

2013-11-07  Glenn Morris  <rgm@gnu.org>

	* unidata/unidata-gen.el (unidata-gen-files):
	Disable version-control in generated files.
	Update Unicode Inc. copyright years.

2013-11-05  Glenn Morris  <rgm@gnu.org>

	* update_autogen: Move here from ../autogen.
	(usage): Update.  Remove -l, add -A.
	(autogendir): New variable.
	(ldefs_flag): Default to set.
	(genfiles): Reduce to only ms-dos relevant files.
	(main): Make checking autogen sources optional.
	Make copying of autogen files optional.

2013-10-30  Glenn Morris  <rgm@gnu.org>

	* unidata/unidata-gen.el (unidata-gen-files): Use pop.
	Also take the output directory as an argument.
	* unidata/Makefile.in: Simplify now that unidata-gen-files takes
	the output directory as an argument (no need to cd, etc).
	(abs_srcdir, abs_builddir): Remove.
	(abs_top_builddir): Replace by top_builddir.
	(${DSTDIR}/charprop.el): No need to cd.  Pass dest as argument.